--- a/src/api/requirements.txt
+++ b/src/api/requirements.txt
@@ -4,6 +4,8 @@ django-cors-headers==3.14.0
 django-environ==0.10.0
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
+djangorestframework-simplejwt==5.2.2
 Pillow==9.5.0
+PyJWT==2.7.0
 pytz==2023.3
 sqlparse==0.4.3
