--- a/backend/enviroments.env
+++ b/backend/enviroments.env
@@ -1,10 +1,11 @@
 SECRET_KEY=k8v14n7fuhaaphpn+zy)=^opn@tip%%kyc+3$7@ya%sa@qyq(m
 DEBUG=True
 DEVELOPMENT_MODE=False
-DJANGO_ALLOWED_HOSTS=127.0.0.1,localhost,nataliastrzelczyk.com
-DJANGO_CSRF_TRUSTED_ORIGINS=http://127.0.0.1,http://localhost,http://nataliastrzelczyk.com
+DJANGO_ALLOWED_HOSTS=nataliastrzelczyk.com,www.api.nataliastrzelczyk.com,api.nataliastrzelczyk.com,www.nataliastrzelczyk.com
+DJANGO_CSRF_TRUSTED_ORIGINS=https://nataliastrzelczyk.com,https://www.nataliastrzelczyk.com,https://api.nataliastrzelczyk.com,https://www.api.nataliastrzelczyk.com
 DB_NAME=db_s208
 DB_USER=s208
 DB_PASSWORD=C6A2_ff8d9d
 DB_HOST=psql01.mikr.us
 DB_PORT=5432
+
