--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -5,6 +5,8 @@ django-environ==0.10.0
 django-rest-framework==0.1.0
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+gunicorn==21.2.0
+packaging==23.1
 Pillow==10.0.0
 psycopg2-binary==2.9.6
 PyJWT==2.7.0
