--- a/frontend/nginx.custom.conf
+++ b/frontend/nginx.custom.conf
@@ -1,11 +1,41 @@
+# Configuration for nataliastrzelczyk.com (Front-end)
 server {
-  listen 80;
-  server_name _;
+    listen 80;
+    server_name nataliastrzelczyk.com;
 
-  location / {
-      root /usr/share/nginx/html;
-      index index.html index.htm;
-      try_files $uri $uri/ /index.html =404;
+    location / {
+        root /usr/share/nginx/html;
+        index index.html index.htm;
+        try_files $uri $uri/ /index.html =404;
+    }
+}
+
+# Configuration for api.nataliastrzelczyk.com (Back-end)
+upstream local-8000 {
+    server backend:8000;
+}
+
+server {
+    listen 80;
+    server_name api.nataliastrzelczyk.com;
+
+    location /staticfiles/ {
+        alias /code/src/django_app/app_api/staticfiles/;
+    }
+
+    location / {
+        try_files $uri $uri/ /index.html =404;
+        root /usr/share/nginx/html;
+    }
+
+    location ~ ^/(api|admin|sitemap\.xml) {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        if (!-f $request_filename){
+            proxy_pass http://local-8000;
+            break;
+        }
     }
 }
 upstream local-8000 {
