--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -15,6 +15,8 @@ services:
       context: ./frontend/
     ports:
       - "81:80"
+    volumes:
+      - staticfiles:/code/staticfiles/
     depends_on:
       - backend
     env_file:
@@ -32,3 +34,5 @@ services:
 volumes:
   postgres-db:
   media:
+  staticfiles:
+
