zmiana z api subdomain na endpoitn api

--- a/environments.env
+++ b/environments.env
@@ -7,9 +7,9 @@ DB_HOST=psql01.mikr.us
 DB_PORT=5432
 
 VERSION=VERSION_NOT_SET
-API_URL=http://localhost:8000/
+API_URL=http://nataliastrzelczyk.com/
 
 DEBUG=True
 DEVELOPMENT_MODE=False
-DJANGO_ALLOWED_HOSTS=nataliastrzelczyk.com,www.api.nataliastrzelczyk.com,api.nataliastrzelczyk.com,www.nataliastrzelczyk.com
-DJANGO_CSRF_TRUSTED_ORIGINS=https://nataliastrzelczyk.com,https://www.nataliastrzelczyk.com,https://api.nataliastrzelczyk.com,https://www.api.nataliastrzelczyk.com
+DJANGO_ALLOWED_HOSTS=nataliastrzelczyk.com,www.nataliastrzelczyk.com
+DJANGO_CSRF_TRUSTED_ORIGINS=https://nataliastrzelczyk.com,https://www.nataliastrzelczyk.com
