--- a/environments.env
+++ b/environments.env
@@ -1,5 +1,3 @@
-POSTGRES_PASSWORD=C6A2_ff8d9d
-
 DB_NAME=db_s208
 DB_USER=s208
 DB_PASSWORD=C6A2_ff8d9d
@@ -7,9 +5,9 @@ DB_HOST=psql01.mikr.us
 DB_PORT=5432
 
 VERSION=VERSION_NOT_SET
-API_URL=http://nataliastrzelczyk.com/
+API_URL=http://localhost:8000/
 
-DEBUG=True
+DEBUG=False
 DEVELOPMENT_MODE=False
-DJANGO_ALLOWED_HOSTS=nataliastrzelczyk.com,www.nataliastrzelczyk.com
-DJANGO_CSRF_TRUSTED_ORIGINS=https://nataliastrzelczyk.com,https://www.nataliastrzelczyk.com
+DJANGO_ALLOWED_HOSTS=nataliastrzelczyk.com,www.api.nataliastrzelczyk.com,api.nataliastrzelczyk.com,www.nataliastrzelczyk.com
+DJANGO_CSRF_TRUSTED_ORIGINS=https://nataliastrzelczyk.com,https://www.nataliastrzelczyk.com,https://api.nataliastrzelczyk.com,https://www.api.nataliastrzelczyk.com
