--- a/frontend/nginx.custom.conf
+++ b/frontend/nginx.custom.conf
@@ -17,7 +17,7 @@ server {
     listen 0.0.0.0:80;
 
     location /staticfiles/ {
-      alias /code/src/django_app/app_api/staticfiles/;
+      alias /code/staticfiles/;
     }
 
     location / {
