--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -8,6 +8,6 @@ RUN npm run build
 FROM nginx:1.15
 EXPOSE 80
 COPY --from=build-stage /app/dist/photo/ /usr/share/nginx/html
-COPY --from=build-stage /app/nginx.custom.conf /etc/nginx/conf.d/default.conf
+#COPY --from=build-stage /app/nginx.custom.conf /etc/nginx/conf.d/default.conf
 
 CMD ["/bin/sh",  "-c",  "envsubst < /usr/share/nginx/html/assets/env.template.js > /usr/share/nginx/html/assets/env.js && exec nginx -g 'daemon off;'"]
