--- a/environments.env
+++ b/environments.env
@@ -7,7 +7,7 @@ DB_PORT=5432
 VERSION=VERSION_NOT_SET
 API_URL=http://nataliastrzelczyk.com/
 
-DEBUG=False
+DEBUG=True
 DEVELOPMENT_MODE=False
 DJANGO_ALLOWED_HOSTS=nataliastrzelczyk.com,www.api.nataliastrzelczyk.com,api.nataliastrzelczyk.com,www.nataliastrzelczyk.com
 DJANGO_CSRF_TRUSTED_ORIGINS=https://nataliastrzelczyk.com,https://www.nataliastrzelczyk.com,https://api.nataliastrzelczyk.com,https://www.api.nataliastrzelczyk.com
