--- a/frontend/nginx.custom.conf
+++ b/frontend/nginx.custom.conf
@@ -9,6 +9,11 @@ server {
     }
 }
 upstream local-8000 {
+    server 127.0.0.1:8000;
+}
+
+server {
+upstream local-8000 {
     server backend:8000;
 }
 
@@ -21,6 +26,28 @@ server {
 
     }
 
+    listen 0.0.0.0:80;
+
+    location /staticfiles/ {
+      alias /code/staticfiles/;
+    }
+
+    location / {
+        try_files $uri $uri/ /index.html =404;
+        root /usr/share/nginx/html;
+    }
+
+    location ~ ^/(api|admin|sitemap\.xml) {
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header Host $http_host;
+        proxy_redirect off;
+        if (!-f $request_filename){
+                proxy_pass http://local-8000;
+                break;
+        }
+    }
+
+}
     location / {
         try_files $uri $uri/ /index.html =404;
         root /usr/share/nginx/html;
