zmienono icone oraz powort do starych ustawien

--- a/environments.env
+++ b/environments.env
@@ -5,7 +5,7 @@ DB_HOST=psql01.mikr.us
 DB_PORT=5432
 
 VERSION=VERSION_NOT_SET
-API_URL=http://nataliastrzelczyk.com/
+API_URL=http://51.77.59.2:8080/
 
 DEBUG=True
 DEVELOPMENT_MODE=False
