--- a/frontend/package.json
+++ b/frontend/package.json
@@ -26,6 +26,7 @@
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "isotope-layout": "^3.0.6",
     "jwt-decode": "^3.1.2",
+    "ngx-loading": "^2.0.1",
     "ngx-masonry": "^14.0.1",
     "ngx-toastr": "^16.2.0",
     "rxjs": "~7.8.0",
