--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,8 +13,6 @@ services:
       - static:/code/static/
     ports:
       - "8080:8000"
-    env_file:
-      - environments.env
 
   frontend:
     build:
@@ -23,8 +21,8 @@ services:
       - "88:80"
     depends_on:
       - backend
-    env_file:
-      - environments.env
+  db:
+    image: postgres:latest
   app:
     image: 'jc21/nginx-proxy-manager:latest'
     container_name: nginxproxymanager
