--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
     rev: v4.4.0
     hooks:
       - id: trailing-whitespace
-      #      - id: end-of-file-fixer
+      - id: end-of-file-fixer
       - id: check-yaml
       - id: debug-statements
 
