44 - dodano pierwszy test modelu

--- a/backend/pytest.ini
+++ b/backend/pytest.ini
@@ -1,4 +1,6 @@
 [pytest]
-python_files = tests.py test_*.py
+DJANGO_SETTINGS_MODULE = core.settings
+
+python_files = tests.py test_*.py *_tests.py
 addopts = -s -q --disable-warnings --doctest-modules
 norecursedirs = .git .cache tmp*
