--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -6,7 +6,7 @@ repos:
     rev: v4.4.0
     hooks:
       - id: trailing-whitespace
-      - id: end-of-file-fixer
+      #  - id: end-of-file-fixer
       - id: check-yaml
       - id: debug-statements
 
@@ -15,12 +15,12 @@ repos:
     hooks:
       - id: black
         files: ^backend/
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.5.1'
-    hooks:
-      - id: mypy
-        exclude: "[a-zA-Z]*/(migrations)/(.)*"
-        additional_dependencies: [
-          djangorestframework-stubs,
-          django-stubs,
-        ]
+#  - repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: 'v1.5.1'
+#    hooks:
+#      - id: mypy
+#        exclude: "[a-zA-Z]*/(migrations)/(.)*"
+#        additional_dependencies: [
+#          djangorestframework-stubs,
+#          django-stubs,
+#        ]
