--- a/.github/workflows/coverage.yaml
+++ b/.github/workflows/coverage.yaml
@@ -37,11 +37,11 @@ jobs:
       - name: Checkout Code Repository
         uses: actions/checkout@v3
       - name: Run DB Migrations
-        run: docker-compose run --rm django python manage.py migrate
+        run: docker-compose run --rm backend python manage.py migrate
       - name: Run Django Tests
-        run: docker-compose run django coverage run -m pytest
+        run: docker-compose run backend coverage run -m pytest
       - name: Generate coverage.lcov
-        run: docker-compose -f docker-compose.yml run django coverage lcov
+        run: docker-compose -f docker-compose.yml run backend coverage lcov
       - name: Tear down the Stack
         run: docker-compose down
       - name: Coveralls Parallel
