--- a/backend/mypy.ini
+++ b/backend/mypy.ini
@@ -1,10 +1,7 @@
 [mypy]
-# results.
 python_version = 3.11
 
-plugins =
-    mypy_django_plugin.main,
-    mypy_drf_plugin.main
+plugins = mypy_django_plugin.main, mypy_drf_plugin.main
 
 ignore_missing_imports = True
 warn_unused_ignores = True
@@ -15,12 +12,3 @@ exclude = venv
 [mypy.plugins.django-stubs]
 django_settings_module = "core.settings"
 namespace_packages = True
-
-[mypy-*.migrations.*]
-ignore_errors = True
-
-[mypy-tests.*]
-disallow_untyped_defs = False
-
-[mypy_django_plugin]
-ignore_missing_model_attributes = True
