Przygotowano srodowisko do testo

--- a/backend/requirements.txt
+++ b/backend/requirements.txt
@@ -1,17 +1,42 @@
 asgiref==3.6.0
+certifi==2023.7.22
+charset-normalizer==3.2.0
+coverage==7.3.0
 Django==4.1.7
 django-cors-headers==3.14.0
 django-environ==0.10.0
 django-rest-framework==0.1.0
+django-stubs==4.2.3
+django-stubs-ext==4.2.2
 djangorestframework==3.14.0
 djangorestframework-simplejwt==5.2.2
+djangorestframework-stubs==3.14.2
+Faker==12.0.1
 gunicorn==21.2.0
+idna==3.4
+iniconfig==2.0.0
+mixer==7.2.2
+mypy==1.5.1
+mypy-extensions==1.0.0
 packaging==23.1
 Pillow==10.0.0
+pluggy==1.2.0
 psycopg2-binary==2.9.6
 PyJWT==2.7.0
+pytest==7.4.0
+pytest-cov==4.1.0
+pytest-django==4.5.2
+pytest-sugar==0.9.7
+python-dateutil==2.8.2
 pytz==2023.3
+requests==2.31.0
+six==1.16.0
 sqlparse==0.4.3
+termcolor==2.3.0
+types-pytz==2023.3.0.1
+types-PyYAML==6.0.12.11
+types-requests==2.31.0.2
+types-urllib3==1.26.25.14
+typing_extensions==4.7.1
+urllib3==2.0.4
 whitenoise==6.5.0
-
-pytest~=7.4.0
