--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -13,6 +13,8 @@ services:
       - static:/code/static/
     ports:
       - "8080:8000"
+    depends_on:
+      - db
 
   frontend:
     build:
@@ -21,8 +23,18 @@ services:
       - "88:80"
     depends_on:
       - backend
+
   db:
-    image: postgres:latest
+    image: postgres:13-alpine
+    environment:
+      - POSTGRES_DB=photo-library-ns
+      - POSTGRES_USER=photo-library-ns
+      - POSTGRES_PASSWORD=photo-library-ns#01
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-db:/var/lib/postgresql/data
+
   app:
     image: 'jc21/nginx-proxy-manager:latest'
     container_name: nginxproxymanager
@@ -41,4 +53,4 @@ services:
 volumes:
   media:
   static:
-
+  postgres-db:
