--- a/backend/.pre-commit-config.yaml
+++ b/backend/.pre-commit-config.yaml
@@ -8,12 +8,12 @@ repos:
       - id: check-yaml
       - id: end-of-file-fixer
       - id: trailing-whitespace
-  - repo: https://github.com/pre-commit/mirrors-mypy
-    rev: 'v1.5.1'
-    hooks:
-      - id: mypy
-        exclude: "[a-zA-Z]*/(migrations)/(.)*"
-        additional_dependencies: [
-          djangorestframework-stubs,
-          django-stubs,
-        ]
+#  - repo: https://github.com/pre-commit/mirrors-mypy
+#    rev: 'v1.5.1'
+#    hooks:
+#      - id: mypy
+#        exclude: "[a-zA-Z]*/(migrations)/(.)*"
+#        additional_dependencies: [
+#          djangorestframework-stubs,
+#          django-stubs,
+#        ]
