--- a/backend/setup.cfg
+++ b/backend/setup.cfg
@@ -9,7 +9,7 @@ plugins =
 ignore_missing_imports = True
 warn_unused_ignores = True
 warn_redundant_casts = True
-strict_optional = False
+strict_optional = True
 exclude = venv
 
 [mypy.plugins.django-stubs]
